Updated the British English translation.

--- a/po/wesnoth-httt/en_GB.po
+++ b/po/wesnoth-httt/en_GB.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2011-05-31 17:37+0100\n"
-"Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
+"PO-Revision-Date: 2012-08-16 08:54-0500\n"
+"Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
 "Language: en_GB\n"
@@ -16,7 +16,6 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. [campaign]: id=Heir_To_The_Throne
 #: data/campaigns/Heir_To_The_Throne/_main.cfg:11
@@ -2651,7 +2650,7 @@ msgid ""
 "backyard so easily... Come forth and attack, my loyal duelist!"
 msgstr ""
 "I see that your forces draw near, impostor! I’ll not be defeated in my own "
-"backyard so easily... Come forth and attack, my loyal duelist!"
+"backyard so easily... Come forth and attack, my loyal duellist!"
 
 #. [then]
 #: data/campaigns/Heir_To_The_Throne/scenarios/08_The_Princess_of_Wesnoth.cfg:324
@@ -3728,7 +3727,7 @@ msgid ""
 "or fetid caves."
 msgstr ""
 "I would settle for escape, though I know not which I dread more: foul orcs "
-"or foetid caves."
+"or fetid caves."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Heir_To_The_Throne/scenarios/13_The_Dwarven_Doors.cfg:309
