--- a/po/wesnoth-lib/en_GB.po
+++ b/po/wesnoth-lib/en_GB.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2012-03-31 15:08-0500\n"
+"PO-Revision-Date: 2012-08-15 07:23-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -16,9 +16,6 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-Language: English\n"
-"X-Poedit-Country: UNITED KINGDOM\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. [terrain_type]: id=deep_water_gray
 #. [terrain_type]: id=deep_water
@@ -2750,7 +2747,7 @@ msgstr "Show icons in front of the player names in the lobby."
 
 #: src/game_preferences_display.cpp:383
 msgid "Uncheck to delete the saved password (on exit)."
-msgstr "Uncheck to delete the saved password (on exit)."
+msgstr "Untick to delete the saved password (on exit)."
 
 #: src/game_preferences_display.cpp:387
 msgid "Do not show messages about players joining the multiplayer lobby"
@@ -3849,12 +3846,3 @@ msgid ""
 msgstr ""
 "The key '$deprecated_key' has been renamed to '$key'. Support for "
 "'$deprecated_key' will be removed in version $removal_version."
-
-#~ msgid "Execute Planned Action"
-#~ msgstr "Execute Planned Action"
-
-#~ msgid "Delete Planned Action"
-#~ msgstr "Delete Planned Action"
-
-#~ msgid "Resize map"
-#~ msgstr "Resize map"
