--- a/po/wesnoth-low/en_GB.po
+++ b/po/wesnoth-low/en_GB.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2012-03-24 18:58-0500\n"
+"PO-Revision-Date: 2012-08-16 10:56-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -3502,7 +3502,7 @@ msgid ""
 "Oh, no, I forgot my dose of Crelanu’s invisibility philter. I’ll go back and "
 "get it. I’ll catch up with you later!"
 msgstr ""
-"Oh, no, I forgot my dose of Crelanu’s invisibility philter. I’ll go back and "
+"Oh, no, I forgot my dose of Crelanu’s invisibility philtre. I’ll go back and "
 "get it. I’ll catch up with you later!"
 
 #. [message]: id=Olurf
@@ -3565,7 +3565,7 @@ msgstr "Landar! You’re back! All is well?"
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/13_News_from_the_Front.cfg:201
 msgid "Yes, I have the philter of invisibility."
-msgstr "Yes, I have the philter of invisibility."
+msgstr "Yes, I have the philtre of invisibility."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/13_News_from_the_Front.cfg:205
@@ -4192,28 +4192,30 @@ msgid ""
 "We need to kill the Great Chief and get out before the effect of the philter "
 "ends. Time to drink it down now!"
 msgstr ""
-"We need to kill the Great Chief and get out before the effect of the philter "
+"We need to kill the Great Chief and get out before the effect of the philtre "
 "ends. Time to drink it down now!"
 
 #. [event]: (id=Kalenz) (Elvish Lord)}, (id=Landar) ($landar_store.type)}
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/16_The_Chief_Must_Die.cfg:302
 msgid "Crelanu’s philter affecting Kalenz"
-msgstr "Crelanu’s philter affecting Kalenz"
+msgstr "Crelanu’s philtre affecting Kalenz"
 
 #. [event]: (id=Kalenz) (Elvish Lord)}, (id=Landar) ($landar_store.type)}
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/16_The_Chief_Must_Die.cfg:312
 msgid "Crelanu’s philter affecting Landar"
-msgstr "Crelanu’s philter affecting Landar"
+msgstr "Crelanu’s philtre affecting Landar"
 
 # T'was strange, t'was passing strange
 # t'was pitiful, t'was wondrous pitiful.
+# .
+# TODO: add space after em dash in the original
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/16_The_Chief_Must_Die.cfg:318
 msgid ""
 "This feels passing strange! Landar, remember to stay far from the wolves —"
 "they may be able to smell us."
 msgstr ""
-"This feels passing strange! Landar, remember to stay far from the wolves —"
+"This feels passing strange! Landar, remember to stay far from the wolves — "
 "they may be able to smell us."
 
 #. [message]: id=Kalenz
@@ -4995,7 +4997,7 @@ msgid ""
 msgstr ""
 "Free of the pressure of war, they took delight in each other. The heart-bond "
 "they had formed amidst peril and death grew closer, and all but vanquished "
-"the remnant evil Crelanu’s philter had left in Kalenz. The two began to "
+"the remnant evil Crelanu’s philtre had left in Kalenz. The two began to "
 "think of having children."
 
 #. [part]
@@ -5395,7 +5397,7 @@ msgstr ""
 "full measure both their mother’s healing gifts and their father’s talented "
 "and searching mind. In the fullness of time, after a long life full of "
 "accomplishment and love and laughter, Cleodil died after the manner of "
-"Elves, aging swiftly to a peaceful end."
+"Elves, ageing swiftly to a peaceful end."
 
 #. [part]
 #. "Sundered" is archaic English roughly meaning "torn apart".
@@ -5410,7 +5412,7 @@ msgid ""
 "wisdom or magic or his bright keen blade."
 msgstr ""
 "But Kalenz’s story was not yet over. Aquagar’s curse was fulfilled; "
-"prolonged in life by Crelanu’s philter, he outlived not only his beloved but "
+"prolonged in life by Crelanu’s philtre, he outlived not only his beloved but "
 "their children. Sundered from his kin by their mortality, fleeing the "
 "reflections in their eyes of his lost beloved, he left his home and wandered "
 "for many a year across the Great Continent. Oft did he arrive unexpected at "
@@ -5565,43 +5567,3 @@ msgstr "Oh, no! We are too late..."
 #: data/campaigns/Legend_of_Wesmere/utils/low-macros.cfg:43
 msgid "You retrieve $amount_gold pieces of gold."
 msgstr "You retrieve $amount_gold pieces of gold."
-
-#~ msgid "This is a stub!"
-#~ msgstr "This is a stub!"
-
-#~ msgid "Elvish Horse Archer"
-#~ msgstr "Elvish Horse Archer"
-
-#~ msgid "sword"
-#~ msgstr "sword"
-
-#~ msgid "bow"
-#~ msgstr "bow"
-
-#~ msgid "2p MC — LoW, Hard Mode, Chapter five"
-#~ msgstr "2p MC — LoW, Hard Mode, Chapter five"
-
-#~ msgid ""
-#~ "<i>The Legend of Wesmere</i>\n"
-#~ "Multiplayer Campaign\n"
-#~ "Chapter five\n"
-#~ " Hard difficulty"
-#~ msgstr ""
-#~ "<i>The Legend of Wesmere</i>\n"
-#~ "Multiplayer Campaign\n"
-#~ "Chapter five\n"
-#~ " Hard difficulty"
-
-#~ msgid "2p MC — LoW, Easy Mode, Chapter five"
-#~ msgstr "2p MC — LoW, Easy Mode, Chapter five"
-
-#~ msgid ""
-#~ "<i>The Legend of Wesmere</i>\n"
-#~ "Multiplayer Campaign\n"
-#~ "Chapter five\n"
-#~ " Easy difficulty"
-#~ msgstr ""
-#~ "<i>The Legend of Wesmere</i>\n"
-#~ "Multiplayer Campaign\n"
-#~ "Chapter five\n"
-#~ " Easy difficulty"
