--- a/po/wesnoth-manual/en_GB.po
+++ b/po/wesnoth-manual/en_GB.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3.7+svn\n"
 "POT-Creation-Date: 2012-02-18 14:42+0100\n"
-"PO-Revision-Date: 2012-02-22 21:36-0500\n"
+"PO-Revision-Date: 2012-08-15 07:25-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -361,9 +361,9 @@ msgid ""
 "from the beginning while you watch."
 msgstr ""
 "Click this button to load a previously saved game. You will be shown a "
-"dialogue listing saved games. Select the game and click Ok to load and "
+"dialogue listing saved games. Select the game and click OK to load and "
 "continue, or Cancel to return to the Main Menu. If you select a replay game, "
-"you can check the Replay check box. The loaded game will make all the moves "
+"you can tick the Replay tickbox. The loaded game will make all the moves "
 "from the beginning while you watch."
 
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><term>
