--- a/po/wesnoth-sotbe/en_GB.po
+++ b/po/wesnoth-sotbe/en_GB.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.11+cvs\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2011-07-04 02:22+0100\n"
-"Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
+"PO-Revision-Date: 2012-08-16 11:46-0500\n"
+"Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
 "Language: en_GB\n"
@@ -438,6 +438,7 @@ msgstr ""
 "But the free tribes are beyond the Mountains of Haag. These mountains are "
 "infested with dwarves and wild trolls."
 
+# TODO: put space around the dash in the original
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/01_End_of_Peace.cfg:263
 msgid ""
@@ -445,9 +446,9 @@ msgid ""
 "will help us. And what true orc has ever feared dwarvish dirt-grubbers? Move "
 "it! We leave within the hour. If you’re not ready by then, stay and die."
 msgstr ""
-"Don’t be so cowardly. The trolls have been our allies in the past—maybe they "
-"will help us. And what true orc has ever feared dwarvish dirt-grubbers? Move "
-"it! We leave within the hour. If you’re not ready by then, stay and die."
+"Don’t be so cowardly. The trolls have been our allies in the past — maybe "
+"they will help us. And what true orc has ever feared dwarvish dirt-grubbers? "
+"Move it! We leave within the hour. If you’re not ready by then, stay and die."
 
 #. [option]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/01_End_of_Peace.cfg:275
@@ -4142,7 +4143,7 @@ msgstr ""
 "discover, after a few days, that his people held him in awe. News of "
 "Kapou’e’s exploits had been widely circulated — from his rescue of the "
 "shamans at Barag Gór, to his forced march through the northern blizzards. "
-"Younger grunts especially worshiped him with such fervour that he found it "
+"Younger grunts especially worshipped him with such fervour that he found it "
 "almost frightening."
 
 #. [part]
