--- a/po/wesnoth-trow/en_GB.po
+++ b/po/wesnoth-trow/en_GB.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2011-07-09 05:47-0500\n"
+"PO-Revision-Date: 2012-08-16 12:35-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -16,7 +16,6 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. [scenario]: id=22_The_Rise_of_Wesnoth
 #. [campaign]: id=The_Rise_of_Wesnoth
@@ -3216,7 +3215,7 @@ msgid ""
 "Ruby of Fire. The artifact should help with what must come."
 msgstr ""
 "First, I <i>can</i> translate the book that will allow Haldric to use the "
-"Ruby of Fire. The artifact should help with what must come."
+"Ruby of Fire. The artefact should help with what must come."
 
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/11_Southbay_in_Winter.cfg:156
