--- a/po/wesnoth-dw/en_GB.po
+++ b/po/wesnoth-dw/en_GB.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2011-10-31 16:33-0500\n"
+"PO-Revision-Date: 2012-08-16 10:23-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -918,10 +918,11 @@ msgstr ""
 "I know what that is. It’s a storm trident. It is supposed to let you control "
 "the lightning."
 
+# TODO: convert the hyphen-minus to en en dash in the original
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:294
 msgid "The trident is 14-2, magical, ranged, with <i>fire</i> damage."
-msgstr "The trident is 14-2, magical, ranged, with <i>fire</i> damage."
+msgstr "The trident is 14–2, magical, ranged, with <i>fire</i> damage."
 
 #. [option]: speaker=$unit.id
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:301
@@ -2582,10 +2583,11 @@ msgstr "Now we can finally grab that sword."
 msgid "I am not going with you. One of your people should take the sword."
 msgstr "I am not going with you. One of your people should take the sword."
 
+# TODO: convert hyphen-minus in the original
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:1011
 msgid "This sword is 8-4, magical, with <i>fire</i> damage."
-msgstr "This sword is 8-4, magical, with <i>fire</i> damage."
+msgstr "This sword is 8–4, magical, with <i>fire</i> damage."
 
 #. [option]: speaker=unit
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:1018
@@ -3176,6 +3178,7 @@ msgstr ""
 msgid "Young King"
 msgstr "Young King"
 
+# TODO: "veterens" -> "veterans" in the original
 #. [unit_type]: id=Merman Young King, race=merman
 #: data/campaigns/Dead_Water/units/Young_King.cfg:29
 msgid ""
@@ -3185,7 +3188,7 @@ msgid ""
 msgstr ""
 "A young king with some battle experience will be treated with some respect. "
 "Common citizens will be inspired to do their utmost when the king is nearby, "
-"but battle-hardened veterens will be less impressed."
+"but battle-hardened veterans will be less impressed."
 
 #: data/campaigns/Dead_Water/utils/dw-utils.cfg:72
 msgid "Merman Forces"
