--- a/po/wesnoth-utbs/en_GB.po
+++ b/po/wesnoth-utbs/en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2012-01-06 17:45-0500\n"
+"PO-Revision-Date: 2012-08-16 10:13-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -17,7 +17,6 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. [campaign]: id=Under_the_Burning_Suns
 #. [editor_group]: id=utbs
@@ -3367,10 +3366,8 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:878
-#, fuzzy
-#| msgid "Should I take this sword?"
 msgid "Should I take this ring?"
-msgstr "Should I take this sword?"
+msgstr "Should I take this ring?"
 
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:880
@@ -3391,10 +3388,8 @@ msgstr "This ring will increase your maximum speed by 1."
 
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:913
-#, fuzzy
-#| msgid "No, I think someone else should wield it."
 msgid "No, I think someone else should wear it."
-msgstr "No, I think someone else should wield it."
+msgstr "No, I think someone else should wear it."
 
 #. [message]: speaker=$explorer.id
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:947
@@ -7873,7 +7868,7 @@ msgid ""
 msgstr ""
 "All the paths lead to this chamber. Is this just a dead end? It seems to be "
 "some sort of temple, but it has obviously been abandoned for a long time. "
-"All that is left is that stone altar. What god they were worshiping I have "
+"All that is left is that stone altar. What god they were worshipping I have "
 "no idea, but the dried blood and cracked bones on the altar do not bode well."
 
 #. [message]: speaker=$ally_name
@@ -10302,7 +10297,7 @@ msgid ""
 msgstr ""
 "Wait, my people, do not be deceived. This thing that appears by Tanstafaal’s "
 "side is not our god. I too was fooled at first, but I have come to realize "
-"by her actions that she is an imposter. When she appeared to me the night "
+"by her actions that she is an impostor. When she appeared to me the night "
 "before Garak died, she told me to kill all that lived under the mountains, "
 "even the dwarves who ended up helping us. Likewise when we escaped from the "
 "caves, she appeared to me again, and told me to bow down to the humans, else "
@@ -10355,7 +10350,7 @@ msgid ""
 msgstr ""
 "Wait, my people, do not be deceived. This thing that appears by Tanstafaal’s "
 "side is not our god. I too was fooled at first, but I have come to realize "
-"by her actions that she is an imposter. When she appeared to me the night "
+"by her actions that she is an impostor. When she appeared to me the night "
 "before Garak died, she told me to kill all that lived under the mountains, "
 "even the trolls who ended up helping us. Likewise when we escaped from the "
 "caves, she appeared to me again, and told me to bow down to the humans, else "
@@ -12751,13 +12746,13 @@ msgid ""
 msgstr ""
 "Zhangor appeared to them in the guise of a beautiful elven youth and told "
 "them that a great darkness was coming, which would destroy all the knowledge "
-"that they had collected. He said if they worshiped him as a god he would "
+"that they had collected. He said if they worshipped him as a god he would "
 "protect them and reveal unto them knowledge and magics that they could only "
 "dream of. But he wanted more; he demanded a blood sacrifice of one elf a "
 "month. Some of the elves were revolted, but most were tempted by the "
-"prospect of even greater power, and so they bowed down and worshiped him as "
+"prospect of even greater power, and so they bowed down and worshipped him as "
 "their god. Those few who protested his ascendancy were the first to be "
-"thrown into jails and sacrificed."
+"thrown into gaols and sacrificed."
 
 #. [message]: speaker=Zhul
 #: data/campaigns/Under_the_Burning_Suns/scenarios/10_Speaking_with_the_Fishes.cfg:682
@@ -12783,7 +12778,7 @@ msgstr ""
 "these sacrifices and grew stronger and more powerful. He wanted even more. "
 "When no more refugees came, the priests ordered raiding parties to go out "
 "and bring back any poor souls they could find. When no more elves could be "
-"found they preyed upon humans, dwarves, orcs—anyone they could find in the "
+"found they preyed upon humans, dwarves, orcs — anyone they could find in the "
 "nearby lands."
 
 #. [message]: speaker=Zhul
@@ -14052,7 +14047,7 @@ msgid ""
 msgstr ""
 "I stumbled out into the daylight, scarcely believing that we were "
 "victorious. Looking out over the island it took me a moment to realize what "
-"had changed. The foetid darkness had lifted from the land and I saw the suns "
+"had changed. The fetid darkness had lifted from the land and I saw the suns "
 "shining brightly for what seemed like the first time in ages. Gazing across "
 "the bright green trees and sparkling ocean I realized that once this had "
 "been a place of beauty. Several of our brethren were waiting for me and I "
@@ -16373,7 +16368,7 @@ msgid ""
 msgstr ""
 "Chapter 1: I, Kaleh, grew up amid the shifting sands, under our two suns "
 "Sela and Naia. It was a land of hot dry days and cold nights, of roaming "
-"horrours, where water was more valuable than gold. We had lived among the "
+"horrors, where water was more valuable than gold. We had lived among the "
 "sands ever since the forests fell uncounted years ago. It was a hard and "
 "savage land, but we were tougher still, and we managed to survive settled "
 "around one of the rare oases. We had heavily fortified our village against "
@@ -16653,7 +16648,7 @@ msgstr ""
 "onslaught: crops failed, the trees sickened and our forests began to die. "
 "Most disturbing was the way the nights lengthened, creating the long dark we "
 "suffer today. Many of our people despaired, and many embraced the oncoming "
-"darkness, worshiping Uria in hopes of saving themselves. Former friends "
+"darkness, worshipping Uria in hopes of saving themselves. Former friends "
 "fought over what few resources remained, and chaos threatened to overwhelm "
 "us all."
 
@@ -17031,9 +17026,9 @@ msgstr ""
 "Which brings me to the other alien concept I was trying to comprehend: our "
 "goddess Eloh. What was her plan? Why did she want me to surrender to the "
 "humans? Do the humans worship her as well? The humans seem so brutish and "
-"vile, that I can’t imagine them worshiping the same god as us. I thought "
+"vile, that I can’t imagine them worshipping the same god as us. I thought "
 "Eloh was just our god, I don’t remember Zhul mentioning any other races "
-"worshiping her after the Great Fall, though perhaps things had changed in "
+"worshipping her after the Great Fall, though perhaps things had changed in "
 "the intervening years. Her commands don’t make any sense; she doesn’t seem "
 "at all like the goddess Zhul told me about. And what was Esanoo talking "
 "about? How did his master know about ‘Yechnagoth’ and ‘Zhangor’? If Eloh "
@@ -17378,15 +17373,3 @@ msgstr "The Long Dark (3)"
 #: data/campaigns/Under_the_Burning_Suns/utils/time.cfg:164
 msgid "The Long Dark (4)"
 msgstr "The Long Dark (4)"
-
-#~ msgid "By Moradin, I have fallen!"
-#~ msgstr "By Moradin, I have fallen!"
-
-#~ msgid ""
-#~ "Desert Shamans focus on less violent ways to hinder the enemy. Their "
-#~ "entangling attack slows enemies down and reduces by one the number of "
-#~ "times they may attack. Shamans also possess basic healing abilities."
-#~ msgstr ""
-#~ "Desert Shamans focus on less violent ways to hinder the enemy. Their "
-#~ "entangling attack slows enemies down and reduces by one the number of "
-#~ "times they may attack. Shamans also possess basic healing abilities."
