--- a/po/wesnoth/en_GB.po
+++ b/po/wesnoth/en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2012-03-31 15:06-0500\n"
+"PO-Revision-Date: 2012-08-15 07:21-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -16,9 +16,6 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: English\n"
-"X-Poedit-Country: UNITED KINGDOM\n"
-"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. [advanced_preference]: type=boolean
@@ -5647,7 +5644,7 @@ msgid ""
 "Enable the games filter. If unchecked all games are shown, regardless of any "
 "filter."
 msgstr ""
-"Enable the games filter. If unchecked all games are shown, regardless of any "
+"Enable the games filter. If unticked all games are shown, regardless of any "
 "filter."
 
 #: src/multiplayer_lobby.cpp:765
@@ -6536,86 +6533,3 @@ msgstr "Hide plans for $player"
 #: src/whiteboard/manager.cpp:1158
 msgid "Whiteboard Options"
 msgstr "Whiteboard Options"
-
-#~ msgid "Custom lighting for local time of day areas (uses more memory)"
-#~ msgstr "Custom lighting for local time of day areas (uses more memory)"
-
-#~ msgid "TestCamp"
-#~ msgstr "TestCamp"
-
-#~ msgid "Test campaign used to check if new campaign syntax is working."
-#~ msgstr "Test campaign used to check if new campaign syntax is working."
-
-#~ msgid "(Easy)"
-#~ msgstr "(Easy)"
-
-#~ msgid "Soldier"
-#~ msgstr "Soldier"
-
-#~ msgid "(Normal)"
-#~ msgstr "(Normal)"
-
-#~ msgid "Lord"
-#~ msgstr "Lord"
-
-#~ msgid "(Hard)"
-#~ msgstr "(Hard)"
-
-#~ msgid "High Lord"
-#~ msgstr "High Lord"
-
-#~ msgid "Test campaign test [about] entry"
-#~ msgstr "Test campaign test [about] entry"
-
-#~ msgid "Test campaign - first scenario (grass)"
-#~ msgstr "Test campaign - first scenario (grass)"
-
-#~ msgid "Players"
-#~ msgstr "Players"
-
-#~ msgid "Enemies"
-#~ msgstr "Enemies"
-
-#~ msgid "Passed test color"
-#~ msgstr "Passed test colour"
-
-#~ msgid "Failed test color"
-#~ msgstr "Failed test colour"
-
-#~ msgid "Difficulty: Easy"
-#~ msgstr "Difficulty: Easy"
-
-#~ msgid "Difficulty: Normal"
-#~ msgstr "Difficulty: Normal"
-
-#~ msgid "Difficulty: Hard"
-#~ msgstr "Difficulty: Hard"
-
-#~ msgid "Main campaign define"
-#~ msgstr "Main campaign define"
-
-#~ msgid "Extra campaign define"
-#~ msgstr "Extra campaign define"
-
-#~ msgid "Multiplayer define"
-#~ msgstr "Multiplayer define"
-
-#~ msgid "Defeat enemy leader"
-#~ msgstr "Defeat enemy leader"
-
-#~ msgid "Download"
-#~ msgstr "Download"
-
-#~ msgid "Done"
-#~ msgstr "Done"
-
-#~ msgid "Chat Log"
-#~ msgstr "Chat Log"
-
-#~ msgid "No time of day has been defined."
-#~ msgstr "No time of day has been defined."
-
-#~ msgid ""
-#~ "Some units have planned actions left. Do you really want to end your turn?"
-#~ msgstr ""
-#~ "Some units have planned actions left. Do you really want to end your turn?"
