Updated the British English translation.

--- a/po/wesnoth-dm/en_GB.po
+++ b/po/wesnoth-dm/en_GB.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-23 14:08+0100\n"
-"PO-Revision-Date: 2011-11-19 19:53-0500\n"
+"PO-Revision-Date: 2012-08-15 05:05-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -4088,7 +4088,6 @@ msgstr ""
 msgid "Showdown in the Northern Swamp"
 msgstr "Showdown in the Northern Swamp"
 
-# maybe
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg:18
 msgid ""
@@ -4102,7 +4101,7 @@ msgstr ""
 "Swamp of Dread to recover his strength and attempt another conjuration. "
 "Delfador’s troop, hurrying west by secret Dwarvish ways and stealthily "
 "crossing the Listra by night, found the necromancer there, on the brink of "
-"raising another army amidst the foetid reek."
+"raising another army amidst the fetid reek."
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg:22
