--- a/po/wesnoth-help/en_GB.po
+++ b/po/wesnoth-help/en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2012-01-06 17:41-0500\n"
+"PO-Revision-Date: 2012-08-16 08:29-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -16,9 +16,6 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: English\n"
-"X-Poedit-Country: UNITED KINGDOM\n"
-"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. [time]: id=underground
@@ -2863,7 +2860,7 @@ msgstr ""
 "gained by stealth is negated. Elves are an exception to this general rule "
 "for forests. Not only do they possess full movement in forests, but they "
 "also gain a considerable defensive bonus. Dwarves are another exception to "
-"this rule; though they are able to plow through the forests without much "
+"this rule; though they are able to plough through the forests without much "
 "loss of speed, their utter unfamiliarity with the terrain causes them to "
 "receive no defensive bonus.\n"
 "\n"
@@ -3430,6 +3427,7 @@ msgstr ""
 "Debug mode is turned off by quitting the game or :nodebug.\n"
 "\n"
 
+# TODO: "bewteen" -> "between" in the original
 #. [topic]: id=general_commands
 #: data/core/help.cfg:802
 msgid ""
@@ -3444,7 +3442,7 @@ msgstr ""
 "\n"
 "Set or toggle player on side between human and AI player. The player/client "
 "who controls that side needs to issue this command. If no second parameter "
-"is supplied, toggle bewteen human and AI. If it is ‘on’, set an AI "
+"is supplied, toggle between human and AI. If it is ‘on’, set an AI "
 "controller. If it is ‘off’ set a human controller. Defaults to the currently "
 "active side if no parameter is supplied.\n"
 "\n"
@@ -4817,6 +4815,7 @@ msgstr "Drakes"
 # its?
 # of moss < mosses
 # nor
+# TODO: "eggs, hatchings and forges" -> "eggs, hatchlings and forges" in the original
 #. [race]: id=drake
 #: data/core/units.cfg:69
 msgid ""
@@ -4945,7 +4944,7 @@ msgstr ""
 "subsidence of many of their home islands has caused colonies of drakes to "
 "spread to the <ref>dst='great_continent' text='Great Continent'</ref>. "
 "Drakes tend to make their homes in mountain caverns near volcanoes to "
-"protect their eggs, hatchings and forges. While drakes naturally prefer "
+"protect their eggs, hatchlings and forges. While drakes naturally prefer "
 "warmth, their internal fire is more than capable of sustaining them even in "
 "a relatively cold climate, a feature which has allowed them to populate even "
 "some of the mountains of the far north of the Great Continent."
@@ -5050,7 +5049,7 @@ msgstr ""
 "throughout the continent for their prowess in battle. In addition, dwarves "
 "are known for their calculating intellects and superb craftsmanship. Dwarven "
 "smiths are renowned for their deadly weapons and heavy armour. These "
-"accouterments are unrivalled in quality, possibly only matched by those "
+"accoutrements are unrivalled in quality, possibly only matched by those "
 "produced by drake armourers. Their intelligence and natural inquisitiveness "
 "has also made them the most technically advanced race on the continent. One "
 "of their most famous, and feared, discoveries was a mysterious powder that "
