--- a/po/wesnoth-l/en_GB.po
+++ b/po/wesnoth-l/en_GB.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2012-01-06 17:43-0500\n"
+"PO-Revision-Date: 2012-08-16 10:44-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -711,7 +711,7 @@ msgid ""
 "to err."
 msgstr ""
 "Relana, thank you for welcoming our messenger and agreeing to meet with us. "
-"In your many years as Delwyn’s magistrate I have never known your judgment "
+"In your many years as Delwyn’s magistrate I have never known your judgement "
 "to err."
 
 #. [message]: speaker=Relana
@@ -1463,7 +1463,7 @@ msgid ""
 "of gold for his help. It was not the help he was hoping for, but he knew it "
 "would have to be enough for the coming conflict."
 msgstr ""
-"The remaining members were very grateful and offered Baldras a sizable sum "
+"The remaining members were very grateful and offered Baldras a sizeable sum "
 "of gold for his help. It was not the help he was hoping for, but he knew it "
 "would have to be enough for the coming conflict."
 
@@ -1492,7 +1492,7 @@ msgid ""
 "you have done great service to us today, and we owe you a debt. I will help "
 "you to the utmost of my ability."
 msgstr ""
-"No one here is in a position to be dispensing moral judgments. Regardless, "
+"No one here is in a position to be dispensing moral judgements. Regardless, "
 "you have done great service to us today, and we owe you a debt. I will help "
 "you to the utmost of my ability."
 
