--- a/po/wesnoth-sof/en_GB.po
+++ b/po/wesnoth-sof/en_GB.po
@@ -6,8 +6,8 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2011-02-23 23:32+0100\n"
-"Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
+"PO-Revision-Date: 2012-08-15 02:31-0500\n"
+"Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
 "Language: en_GB\n"
@@ -15,7 +15,6 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:11
@@ -1033,7 +1032,7 @@ msgid ""
 "Where’s that fool Rugnur gotten to? It’s time for him to report on events in "
 "the surface world. He’s late!"
 msgstr ""
-"Where’s that fool Rugnur got to? It’s time for him to report on events in "
+"Where’s that fool Rugnur gotten to? It’s time for him to report on events in "
 "the surface world. He’s late!"
 
 #. [message]: speaker=Noiraran
@@ -3333,7 +3332,7 @@ msgid ""
 "Well, I think we’ve gotten a good distance ahead of the elves. What do we do "
 "now?"
 msgstr ""
-"Well, I think we’ve got a good distance ahead of the elves. What do we do "
+"Well, I think we’ve gotten a good distance ahead of the elves. What do we do "
 "now?"
 
 #. [message]: speaker=Thursagan
