--- a/po/wesnoth-tutorial/en_GB.po
+++ b/po/wesnoth-tutorial/en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2011-12-16 05:49-0500\n"
+"PO-Revision-Date: 2012-08-16 12:52-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -17,7 +17,6 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:40
 msgid ""
@@ -529,7 +528,7 @@ msgid ""
 msgstr ""
 "New units cannot act in the turn they appear; you will gain control of them "
 "next turn.\n"
-"After this dialogue, you can move the mouse over a unit to see a summary of "
+"After this dialog, you can move the mouse over a unit to see a summary of "
 "its abilities on the right of the screen."
 
 #. [else]
@@ -1557,11 +1556,13 @@ msgstr "Advance other units and capture villages, then <b>End Turn</b>"
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1138
 msgid ""
-"No other units can reach that orc. I hope my $unit.language_name survives its counter-"
-"attack! I’d better grab more villages and move everyone closer for next turn."
+"No other units can reach that orc. I hope my $unit.language_name survives "
+"its counter-attack! I’d better grab more villages and move everyone closer "
+"for next turn."
 msgstr ""
-"No other units can reach that orc. I hope my $unit.language_name survives its counter-"
-"attack! I’d better grab more villages and move everyone closer for next turn."
+"No other units can reach that orc. I hope my $unit.language_name survives "
+"its counter-attack! I’d better grab more villages and move everyone closer "
+"for next turn."
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1139
