--- a/po/wesnoth-tb/en_GB.po
+++ b/po/wesnoth-tb/en_GB.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2011-05-07 23:29+0100\n"
-"Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
+"PO-Revision-Date: 2012-08-16 11:51-0500\n"
+"Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
 "Language: en_GB\n"
@@ -17,7 +17,6 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:12
@@ -609,7 +608,7 @@ msgid ""
 "trees."
 msgstr ""
 "I am glad at least that we will not have to face ghosts. But those elves "
-"will have us at a disadvantage; our horses will not manoeuver well in the "
+"will have us at a disadvantage; our horses will not manoeuvre well in the "
 "trees."
 
 #. [message]: speaker=Arvith
