Updated the Latin translation.

--- a/po/wesnoth-l/la.po
+++ b/po/wesnoth-l/la.po
@@ -1258,7 +1258,7 @@ msgstr ""
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:703
 msgid "As it turns out, I’m the crazy one. Let’s finish this folly."
-msgstr "At ego vesanus. Delirationem haec perficiamus."
+msgstr "At ego vesanus. Hunc stultum perficiamus."
 
 #. [message]: speaker=Hans
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:728
@@ -1350,11 +1350,15 @@ msgid ""
 "curriculum, you might say, were dealt with harshly. We are outcasts because "
 "we seek to master shadow magic. Our secrecy and security are not cheap."
 msgstr ""
+"Magistratus magiae regis prisci disciplinam usumque magorum Vesnotiensium "
+"severus regebat. Qui ausi... materias liquisse, ut dicunt, saeviter tractati "
+"sumus. Nos profugi cum artem magiae umbrarum perficere petamus. Occulta et "
+"impunitas nostrum pretiosa est."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:241
 msgid "I have heard of you. Necromancers. Barely-human scum, I say."
-msgstr ""
+msgstr "Istorum conscius sum, Veneficorum. Qui faex, puto, vix humana estis"
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:245
@@ -1365,11 +1369,15 @@ msgid ""
 "of balance between the ways of light and darkness. We dance between both "
 "ways, adhering to neither."
 msgstr ""
+"Falsum dicis. Evocatores Mortum servi mortifugarum erorum facti sunt et "
+"denique humanitatem perdunt. Probavimus artes nigras exercendum non semper "
+"ad viam damnatam ducere. Humani manemus, et mystica viae lucis cum via "
+"tenebrarum aequandae petemus. Nos ambas persequimur et neutras obsequimur."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:249
 msgid "I... see, I think. Why do you want to help us?"
-msgstr ""
+msgstr "Intellego... arbitror. Quare nos adiuvare vultis?"
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:253
@@ -1378,6 +1386,8 @@ msgid ""
 "willing to help. Any weakening of the Throne of Wesnoth, whether it be "
 "occupied by King or Queen, aids us."
 msgstr ""
+"Nolumus. Nos petivimus. Sed has res cognosco et iuvare mihi placet. Coronam "
+"Vesnotei, seu Rex seu Regina habet, affligere nobis prosit."
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:264
@@ -1386,6 +1396,9 @@ msgid ""
 "home to a lich and two of its underling necromancers. Our experiments may "
 "have actually aroused it from sleep... We’re not exactly sure."
 msgstr ""
+"Carsin iam semper nebulosa est cum mortifuga duoque veneficorum servilium "
+"hanc silvam occupaverit. Nescio an ille per experimenta nostra ultra se "
+"experrectus est."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:268
@@ -1394,11 +1407,13 @@ msgid ""
 "predicament. My men will wipe this land clean if you can help us defend our "
 "homeland."
 msgstr ""
+"Igitur frontem atque tergum defendere vobis necesse est... has res "
+"intellego. Mei han terram purgaverint si patriam nostramdefendere adiuvabis."
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:293
 msgid "Finally, that creature is dead, yet its foolish minions resist."
-msgstr ""
+msgstr "Ista bestia denique mortua est, sed etiam satellites resistunt"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:300
@@ -1412,6 +1427,8 @@ msgid ""
 "victory. With Helicrom dead, the guild of shadow magic was thrown into "
 "disarray."
 msgstr ""
+"Mortifugae mali mors Silvam Lividam incestans victoriam dubiam attulit, nam, "
+"Helicromo mortuo, collegium magiae tenebrarum disiectum est."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:322
@@ -1420,6 +1437,9 @@ msgid ""
 "of gold for his help. It was not the help he was hoping for, but he knew it "
 "would have to be enough for the coming conflict."
 msgstr ""
+"Relicti grati Baldradi numerum aureorum pro auxilio eius, quod non modum "
+"auxilii sperabat, quamquam sciebat id ad conflictionem futuram necessario "
+"sufficere, obtulerunt."
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:341
@@ -1427,6 +1447,8 @@ msgid ""
 "With the undead driven out, we may live here in relative peace and pursue "
 "our studies. For this, Baldras, I am grateful."
 msgstr ""
+"Nos, inmortibus fusis, hic cum pace mentis studia nostra sequentes vivere "
+"possumus, pro quo, Baldras, quidem gratias habeo."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:345
@@ -1434,6 +1456,8 @@ msgid ""
 "Studies? Peace? You mean to continue feeding on the lawful citizens of "
 "Wesnoth. There will be no peace for them."
 msgstr ""
+"Studiane? Cum pace? Bonis Vesnotei abuti pergere intendis, pro quibus nihil "
+"pacis erit."
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:349
@@ -1442,6 +1466,8 @@ msgid ""
 "you have done great service to us today, and we owe you a debt. I will help "
 "you to the utmost of my ability."
 msgstr ""
+"Nemo nostrum est qui iudicium facere possit. Verumtamen, beneficium magnum "
+"nobis dedistis, et gratias agemus. Vos adiuvabo pro virile parte."
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:353
@@ -1449,6 +1475,8 @@ msgid ""
 "I was planning on giving you gold. Any good army is well financed, and with "
 "the lich gone we can now spare it."
 msgstr ""
+"Aurum tibi dare intendebam. Quisque exercitus bonus copiam auri habet; "
+"equidem, mortifuga deleto, nunc ea uti possumus."
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:357
@@ -1457,6 +1485,8 @@ msgid ""
 "on your adventures. The Queen has been sending mages out here, and my men "
 "are itching for some payback."
 msgstr ""
+"At, puto, melior sit partem meorum qui tecum coniungant commodare. Regina "
+"magos hinc mittere solet, et mei illos ulcisci cupiunt cupiunt."
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:361
@@ -1464,21 +1494,23 @@ msgid ""
 "On the other hand, if I keep the full force of my organization here, we "
 "might be able to regroup and join you on the battlefield when the time comes."
 msgstr ""
+"Contra si vim totam meorum detineam forsitan nos reparare possimus; dehinc "
+"in tempore ad certandum tecum coniungere."
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:365
 msgid "I leave it to you to decide."
-msgstr ""
+msgstr "Tibi rem decernere licet."
 
 #. [option]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:367
 msgid "I will take the gold. How does 500 sound?"
-msgstr ""
+msgstr "Aurum mihi placeat. Quingentos aureos des?"
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:371
 msgid "Agreed. Good luck and farewell to you, Master Baldras."
-msgstr ""
+msgstr "Constat. Feliciter et vale, Baldras."
 
 #. [option]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:392
