Updated translations for Serbian (1.10 only).

--- a/po/wesnoth-httt/sr@ijekavian.po
+++ b/po/wesnoth-httt/sr@ijekavian.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-httt\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2011-12-04 17:45+0100\n"
+"PO-Revision-Date: 2012-06-24 16:50+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
@@ -635,7 +635,7 @@ msgid ""
 "has slain fifty men and a hundred orcs."
 msgstr ""
 "Конраде, ово је Кајлан, један од најмоћнијих међу господарима коња, и од "
-"малобројних који су ради супротставити се Mрачној круни. Прича се да је "
+"малобројних који су ради супротставити се Мрачној круни. Прича се да је "
 "његово бојно копље оборило педесет људи и стотину оркова."
 
 #. [message]: speaker=Kaylan
