--- a/po/wesnoth-utbs/sr@ijekavian.po
+++ b/po/wesnoth-utbs/sr@ijekavian.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-utbs\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-18 09:17+0200\n"
-"PO-Revision-Date: 2012-01-07 13:20+0100\n"
+"PO-Revision-Date: 2012-08-18 11:56+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
@@ -3375,10 +3375,8 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:878
-#, fuzzy
-#| msgid "Should I take this sword?"
 msgid "Should I take this ring?"
-msgstr "Да ли да узмем овај мач?"
+msgstr "Да ли да узмем овај прстен?"
 
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:880
@@ -3399,10 +3397,8 @@ msgstr "Овај прстен увећава највећу брзину за 1.
 
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:913
-#, fuzzy
-#| msgid "No, I think someone else should wield it."
 msgid "No, I think someone else should wear it."
-msgstr "Не, боље да га неко други понесе."
+msgstr "Не, боље да га неко други намакне."
 
 #. [message]: speaker=$explorer.id
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:947
@@ -17284,24 +17280,3 @@ msgstr "дуга тама (3)"
 #: data/campaigns/Under_the_Burning_Suns/utils/time.cfg:164
 msgid "The Long Dark (4)"
 msgstr "дуга тама (4)"
-
-#~ msgid "Dummy Unit1"
-#~ msgstr "статиста 1"
-
-#~ msgid "Dummy Unit2"
-#~ msgstr "статиста 2"
-
-#~ msgid "Dummy Unit3"
-#~ msgstr "статиста 3"
-
-#~ msgid "Dummy Unit4"
-#~ msgstr "статиста 4"
-
-#~ msgid "Dummy Unit5"
-#~ msgstr "статиста 5"
-
-#~ msgid "Dummy Unit6"
-#~ msgstr "статиста 6"
-
-#~ msgid "By Moradin, I have fallen!"
-#~ msgstr "Тако ми Морадина, са мном је свршено!"
