--- a/po/wesnoth-utbs/sr@ijekavianlatin.po
+++ b/po/wesnoth-utbs/sr@ijekavianlatin.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-utbs\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-18 09:17+0200\n"
-"PO-Revision-Date: 2012-01-07 13:20+0100\n"
+"PO-Revision-Date: 2012-08-18 11:56+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
@@ -3378,10 +3378,8 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:878
-#, fuzzy
-#| msgid "Should I take this sword?"
 msgid "Should I take this ring?"
-msgstr "Da li da uzmem ovaj mač?"
+msgstr "Da li da uzmem ovaj prsten?"
 
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:880
@@ -3402,10 +3400,8 @@ msgstr "Ovaj prsten uvećava najveću brzinu za 1."
 
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:913
-#, fuzzy
-#| msgid "No, I think someone else should wield it."
 msgid "No, I think someone else should wear it."
-msgstr "Ne, bolje da ga neko drugi ponese."
+msgstr "Ne, bolje da ga neko drugi namakne."
 
 #. [message]: speaker=$explorer.id
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:947
@@ -17318,24 +17314,3 @@ msgstr "duga tama (3)"
 #: data/campaigns/Under_the_Burning_Suns/utils/time.cfg:164
 msgid "The Long Dark (4)"
 msgstr "duga tama (4)"
-
-#~ msgid "Dummy Unit1"
-#~ msgstr "statista 1"
-
-#~ msgid "Dummy Unit2"
-#~ msgstr "statista 2"
-
-#~ msgid "Dummy Unit3"
-#~ msgstr "statista 3"
-
-#~ msgid "Dummy Unit4"
-#~ msgstr "statista 4"
-
-#~ msgid "Dummy Unit5"
-#~ msgstr "statista 5"
-
-#~ msgid "Dummy Unit6"
-#~ msgstr "statista 6"
-
-#~ msgid "By Moradin, I have fallen!"
-#~ msgstr "Tako mi Moradina, sa mnom je svršeno!"
