--- a/po/wesnoth/sr.po
+++ b/po/wesnoth/sr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-18 09:17+0200\n"
-"PO-Revision-Date: 2012-04-01 16:53+0200\n"
+"PO-Revision-Date: 2012-06-24 16:50+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
@@ -387,7 +387,7 @@ msgstr "Британски енглески превод"
 #. [about]
 #: data/core/about.cfg:1604
 msgid "English (Shaw) Translation"
-msgstr "Eнглески (шовијански) превод"
+msgstr "Енглески (шовијански) превод"
 
 #. [about]
 #: data/core/about.cfg:1627
